--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"/>
 
     <title>Villa Agency - Real Estate HTML5 Template</title>
 
@@ -26,22 +26,18 @@ TemplateMo 591 villa agency
 https://templatemo.com/tm-591-villa-agency
 
 -->
+    <style>
+      .newspaper {
+        column-count: 3;
+        column-gap: 40px;
+        column-rule-style: solid;
+
+
+      }
+    </style>
   </head>
 
 <body>
-
-  <!-- ***** Preloader Start ***** -->
-  <div id="js-preloader" class="js-preloader">
-    <div class="preloader-inner">
-      <span class="dot"></span>
-      <div class="dots">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </div>
-  <!-- ***** Preloader End ***** -->
 
   <div class="sub-header">
     <div class="container">
@@ -68,16 +64,16 @@ https://templatemo.com/tm-591-villa-agency
   <header class="header-area header-sticky">
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 ">
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <h1>Villa</h1>
+                      <h1 class="pb-5">VILLA</h1>
                     </a>
                     <!-- ***** Logo End ***** -->
-                    <!-- ***** Menu Start ***** -->
+                    <!-- ***** Menu Start ***** style hemen öncesi class="active pt-3" -->
                     <ul class="nav">
-                      <li><a href="index.html" class="active">Home</a></li>
+                     <li><a href="index.html">Home</a></li>
                       <li><a href="properties.html">Properties</a></li>
                       <li><a href="property-details.html">Property Details</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
@@ -128,15 +124,15 @@ https://templatemo.com/tm-591-villa-agency
         </div>
         <div class="col-lg-5">
           <div class="section-heading">
-            <h6>| Featured</h6>
-            <h2>Best Appartment &amp; Sea view</h2>
+            <h1>| Featured</br></h1><br><br>
+            <div class="fs-2"><b>Best Appartment &amp; Sea view </b></div>
           </div>
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <div style=""><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   Best useful links ?
-                </button>
+                </button></div>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
@@ -488,6 +484,171 @@ https://templatemo.com/tm-591-villa-agency
 
   <footer>
     <div class="container">
+      <div class="row justify-content-between">
+
+
+
+
+
+        <!-- Single Footer Widget -->
+
+        <div class="col-12 col-sm-6 col-lg-3">
+
+          <div class="single-footer-widget mb-80">
+
+            <!-- Widget Title -->
+
+            <h4 class="widget-title">Contact Us</h4>
+
+
+
+            <!-- Footer Content -->
+
+            <div class="footer-content mb-15">
+
+              <a href="tel:+902122963010"> <h5><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;+90 212 296 30 10</h5></a>
+
+              <p><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Ergenekon Mahallesi, Cumhuriyeti Cad.
+
+                Itır Apt No:179, Kat:5, D:10
+
+                34373 Şişli/İstanbul <br>   <a href="mailto:info@grandoriatours.com"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;info@grandoriatours.com</a></p>
+
+            </div>
+
+
+
+          </div>
+
+        </div>
+
+
+
+        <!-- Single Footer Widget -->
+
+        <div class="col-12 col-sm-6 col-lg-3">
+
+          <div class="single-footer-widget mb-80">
+
+            <!-- Widget Title -->
+
+            <h4 class="widget-title">Quick Links</h4>
+
+
+
+            <!-- Nav -->
+
+            <nav>
+
+              <ul class="our-link">
+
+                <li><a href="https://grandoriatours.com/about-us">About Us</a></li>
+
+                <li><a href="https://grandoriatours.com/contact-us">Contact Us</a></li>
+                <li><a href="https://grandoriatours.com/medical-healthcare">Medical And Health Tourism</a></li>
+
+              </ul>
+
+            </nav>
+
+          </div>
+
+        </div>
+
+
+
+        <!-- Single Footer Widget -->
+
+        <div class="col-12 col-sm-6 col-lg-3">
+
+          <div class="single-footer-widget mb-80">
+
+            <!-- Widget Title -->
+
+            <h4 class="widget-title">&nbsp;</h4>
+
+            <!-- Nav -->
+
+            <nav>
+
+              <ul class="our-link">
+
+                <li><a href="https://grandoriatours.com/transportation-private-cars">Transportation &amp; Private Cars</a></li>
+
+                <li><a rel="nofollow noopener" target="_blank" href="https://grandoriatravel.com/">Hotel Reservations</a></li>
+                <li><a href="https://grandoriatours.com/packages">Tour Packages</a></li>
+
+                <li><a href="https://grandoriatours.com/city-tours">City Tours</a></li>
+
+
+
+              </ul>
+
+            </nav>
+
+          </div>
+
+        </div>
+
+
+
+        <!-- Single Footer Widget -->
+
+        <div class="col-12 col-sm-6 col-lg-3">
+
+          <div class="single-footer-widget mb-80">
+
+            <!-- Widget Title -->
+
+            <h4 class="widget-title">About Us</h4>
+
+            <p>Grandoria Travel is an independent travel agent in Istanbul that offers the highest levels of personal service and care.</p>
+
+
+
+            <!-- Copywrite Text -->
+
+
+
+
+
+            <!-- Social Info -->
+
+            <div class="footer-social-info">
+
+
+              <div id="footer-lang-list" class="footer-lang-trigger" data-header-menu="lang">
+                <p><span class="selectlang en"></span></p>
+                <div class="lang"><ul class="actions"><li>
+                  <a href="https://grandoriatours.com/tr/" class="selectlng tr"><span></span>Türkçe
+                  </a>
+                </li><li>
+                  <a href="https://grandoriatours.com/ar/" class="selectlng ar"><span></span>Arabic
+                  </a>
+                </li></ul></div>
+              </div>
+
+              <a rel="nofollow noopener" href="https://www.facebook.com/GrandoriaTours" class="facebook" data-toggle="tooltip" data-placement="top" title="" target="_blank" data-original-title="Facebook"><i class="fa fa-facebook"></i></a>
+
+              <a rel="nofollow noopener" href="https://twitter.com/GrandoriaTours" class="twitter" data-toggle="tooltip" data-placement="top" title="" target="_blank" data-original-title="Twitter"><i class="fa fa-twitter"></i></a>
+
+              <a rel="nofollow noopener" href="https://www.instagram.com/grandoriatours/" class="instagram" data-toggle="tooltip" data-placement="top" title="" target="_blank" data-original-title="Instagram"><i class="fa fa-instagram"></i></a>
+
+
+
+            </div>
+
+          </div>
+
+        </div>
+
+
+
+
+
+
+
+      </div>
       <div class="col-lg-8">
         <p>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. 
         
